--- a/jasmine/SpecRunner.html
+++ b/jasmine/SpecRunner.html
@@ -12,10 +12,10 @@
   <script src="lib/jasmine-2.3.4/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="../src/frontend/js/inverted-index.js"></script>
+  <script src="../src/inverted-index.js"></script>
 
   <!-- include spec files here... -->
-  <script src="build/bundle.js"></script>
+  <script src="spec/inverted-index-test.js"></script>
 
 </head>
 
