--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,69 +7,40 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
   <link rel="stylesheet" href="css/style.css">
+
 </head>
 
 <body ng-controller="myctrl">
   <div class="row">
     <div class="inverted indigo col s12 white-text">
       <h3> Inverted Index <a class="waves-effect indigo white-text right" href="#modal1" >About</a></h3>
-      <!-- Modal Trigger -->
-      <!-- Modal Structure -->
+
+
       <div id="modal1" class="modal">
       <div class="modal-content">
-      <h4>Inverted Index</h4>
+      <h5>Inverted Index</h5>
       <p>An inverted index consists of a list of all the unique words that appear in any document, and for each word, a
             list of the documents in which it appears. Inverted index object takes a JSON array of text objects and creates
             an index from the array. The index allows a user to search for text blocks in the array that contain a specified
             collection of words.</p>
-            <h4>How It Works</h4>
+            <h5>How It Works</h5>
           <ul>
-            <li>Creating an Index</li>
+            <li><strong>Creating an Index</strong></li>
             <ol>
               <li>Choose JSON file(s).</l1>
               <li>Select JSON file.</li>
               <li>Click <strong>Create Index</strong> button</li>
             </ol>
-            <li>Searching an Index</li>
+            <li><strong>Searching an Index</strong></li>
             <ol>
               <li>Select a file whose Index has been created already.</l1>
                 <li>Enter your search word(s)</li>
                 <li>CLick on the 'search' button.</li>
-    </div>
-    <div class="modal-footer">
-      <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">ok</a>
     </div>
   </div>
     </div>
   </div>
   <div class="container">
-    <div class="row">
-      <div class="col s6">
-        <div class="about">
-          <h4>About</h4>
-          <p class="text-justify">An inverted index consists of a list of all the unique words that appear in any document, and for each word, a
-            list of the documents in which it appears. Inverted index object takes a JSON array of text objects and creates
-            an index from the array. The index allows a user to search for text blocks in the array that contain a specified
-            collection of words.</p>
-           <div class="row">
-           </div>
-        </div>
-       <div class="col s6">
-          <h4>How It Works</h4>
-          <ul>
-            <li>Creating an Index</li>
-            <ol>
-              <li>Choose JSON file(s).</l1>
-              <li>Select JSON file.</li>
-              <li>Click <strong>Create Index</strong> button</li>
-            </ol>
-            <li>Searching an Index</li>
-            <ol>
-              <li>Select a file whose Index has been created already.</l1>
-                <li>Enter your search word(s)</li>
-                <li>CLick on the 'search' button.</li>
-      </div>
-    </div>
     <div class="row">
       <div class="col s6">
         <form>
@@ -96,9 +67,10 @@
           </div>
         </form>
         <form>
-          <select class="browser-default" ng-model="selectedFile">
+          <select class="browser-default" ng-model="searchFile">
             <option value="" disabled selected>Select File</option>
             <option value="{{files}}" ng-repeat="files in fileName">{{files}}</option>
+            <option value="all">All</option>
           </select>
         </form>
         <form>
@@ -107,7 +79,10 @@
           </div>
         </form>
       </div>
-      <table class="striped" ng-show="showTable">
+
+
+      <span ng-show="singleTable" >
+      <table class="striped">
         <thead>
           <tr>
             <span ng-if="documents">
@@ -128,10 +103,34 @@
           </tr>
         </tbody>
       </table>
+      </span>
+
+
+       <span ng-show="allTable" ng-repeat="(doc, docType) in documents">
+         <div class="bookDetails">{{doc}}</div>
+       <table class="striped">
+         <thead>
+           <tr>
+             <th ng-if="docType">Words</th>
+             <th ng-repeat="i in docType">Doc {{i}}</th>
+            </tr>
+            </thead>
+            <tbody>
+              <tr ng-repeat="(key, value) in result[doc] ">
+                <td>{{ key }}</td>
+                <td ng-repeat="i in docType">
+                   <span ng-repeat="val in value[key]">
+              <span ng-if="val == i"><i class="material-icons">check</i>
+              </span>
+              </span>
+              </tr>
+            </tbody>
+        </table></span>
+
     </div>
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
-    <script type="text/javascript" src="../src/inverted-index.js"></script>
+    <script type="text/javascript" src="/inverted-index.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <script src="js/helper.js"></script>
 </body>
