--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -8,37 +8,35 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/sweetalert.css">
-
 </head>
 
 <body ng-controller="myctrl">
   <div class="row">
     <div class="inverted indigo col s12 white-text">
-      <h3> Inverted Index <a class="waves-effect indigo white-text right" href="#modal1" >About</a></h3>
-
-
+      <h3> Inverted Index <a class="waves-effect indigo white-text right" href="#modal1">About</a></h3>
       <div id="modal1" class="modal">
-      <div class="modal-content">
-      <h5>Inverted Index</h5>
-      <p>An inverted index consists of a list of all the unique words that appear in any document, and for each word, a
-            list of the documents in which it appears. Inverted index object takes a JSON array of text objects and creates
-            an index from the array. The index allows a user to search for text blocks in the array that contain a specified
-            collection of words.</p>
-            <h5>How It Works</h5>
+        <div class="modal-content">
+          <h5>Inverted Index</h5>
+          <p>An inverted index consists of a list of all the unique words that appear
+            in any document, and for each word, a list of the documents in which
+            it appears. Inverted index object takes a JSON array of text objects
+            and creates an index from the array. The index allows a user to search
+            for text blocks in the array that contain a specified collection of words.</p>
+          <h5>How It Works</h5>
           <ul>
             <li><strong>Creating an Index</strong></li>
             <ol>
               <li>Choose JSON file(s).</l1>
-              <li>Select JSON file.</li>
-              <li>Click <strong>Create Index</strong> button</li>
+                <li>Select JSON file.</li>
+                <li>Click <strong>Create Index</strong> button</li>
             </ol>
             <li><strong>Searching an Index</strong></li>
             <ol>
               <li>Select a file whose Index has been created already.</l1>
                 <li>Enter your search word(s)</li>
                 <li>CLick on the 'search' button.</li>
-    </div>
-  </div>
+        </div>
+      </div>
     </div>
   </div>
   <div class="container">
@@ -46,16 +44,12 @@
       <div class="col s6">
         <form>
           <div class="selectFile">
-            <input type="file" id="json-file" multiple required></br>
+            <input type="file" id="json-file" multiple></br>
           </div>
-        <!--</form>
-        <form>-->
           <select class="browser-default" ng-model="selectedFile">
             <option value="" disabled selected>Select File</option>
             <option value="{{files}}" ng-repeat="files in fileName">{{files}}</option>
           </select>
-        <!--</form>
-        <form>-->
           <div class="createIndex">
             <button class="indigo white-text btn" id="createIndex" ng-click="createIndex()">Create index</button>
           </div>
@@ -66,23 +60,17 @@
           <div class="searchIndex">
             <input placeholder="Search" ng-model="query" id="searchInput" maxlength="100">
           </div>
-        </form>
-        <form>
           <select class="browser-default" ng-model="searchFile">
             <option value="" disabled selected>Select File</option>
             <option value="{{files}}" ng-repeat="files in fileName">{{files}}</option>
             <option value="all">All</option>
           </select>
-        </form>
-        <form>
           <div>
             <button class="indigo white-text btn" id="search" ng-click="search()">Search <i class="material-icons">search</i></button></br>
           </div>
         </form>
       </div>
-
-
-      <span ng-show="singleTable" >
+      <span ng-show="singleTable">
       <table class="striped">
         <thead>
           <tr>
@@ -90,24 +78,22 @@
             <th data-field="id">{{selectedFile}}</th>
             <th ng-repeat="num in documents">Doc {{num}}</th>
             </span>
-          </tr>
-        </thead>
-        <tbody>
-          <tr ng-repeat="(key,values) in result">
-            <td> {{key}}</td>
-            <td ng-repeat="num in documents">
-              <span ng-repeat="value in values">
+      </tr>
+      </thead>
+      <tbody>
+        <tr ng-repeat="(key,values) in result">
+          <td> {{key}}</td>
+          <td ng-repeat="num in documents">
+            <span ng-repeat="value in values">
               <span ng-if="value == num"><i class="material-icons">check</i>
               </span>
-              </span>
-            </td>
-          </tr>
-        </tbody>
+            </span>
+          </td>
+        </tr>
+      </tbody>
       </table>
       </span>
-
-
-       <span ng-show="allTable" ng-repeat="(doc, docType) in documents">
+      <span ng-show="allTable" ng-repeat="(doc, docType) in documents">
          <div class="bookDetails">{{doc}}</div>
        <table class="striped">
          <thead>
@@ -123,15 +109,15 @@
                    <span ng-repeat="val in value[key]">
               <span ng-if="val == i"><i class="material-icons">check</i>
               </span>
-              </span>
-              </tr>
-            </tbody>
-        </table></span>
-
+      </span>
+      </tr>
+      </tbody>
+      </table>
+      </span>
     </div>
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
-    <script type="text/javascript" src="../src/inverted-index.js"></script>
+    <script type="text/javascript" src="../inverted-index.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <script src="js/helper.js"></script>
     <script src="js/sweetalert.min.js"></script>
