--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -117,7 +117,7 @@
     </div>
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
-    <script type="text/javascript" src="../inverted-index.js"></script>
+    <script type="text/javascript" src="./inverted-index.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <script src="js/helper.js"></script>
     <script src="js/sweetalert.min.js"></script>
