--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -11,34 +11,38 @@
 </head>
 
 <body ng-controller="myctrl">
-  <div class="row">
-    <div class="inverted indigo col s12 white-text">
-      <h3> Inverted Index <a class="waves-effect indigo white-text right" href="#modal1">About</a></h3>
-      <div id="modal1" class="modal">
-        <div class="modal-content">
-          <h5>Inverted Index</h5>
-          <p>An inverted index consists of a list of all the unique words that appear
-            in any document, and for each word, a list of the documents in which
-            it appears. Inverted index object takes a JSON array of text objects
-            and creates an index from the array. The index allows a user to search
-            for text blocks in the array that contain a specified collection of words.</p>
-          <h5>How It Works</h5>
-          <ul>
-            <li><strong>Creating an Index</strong></li>
-            <ol>
-              <li>Choose JSON file(s).</l1>
-                <li>Select JSON file.</li>
-                <li>Click <strong>Create Index</strong> button</li>
-            </ol>
-            <li><strong>Searching an Index</strong></li>
-            <ol>
-              <li>Select a file whose Index has been created already.</l1>
-                <li>Enter your search word(s)</li>
-                <li>CLick on the 'search' button.</li>
-        </div>
+<div class="row">
+  <div class="inverted indigo col s12 white-text">
+    <h3> Inverted Index <a class="waves-effect indigo white-text right" href="#modal1">About</a></h3>
+    <div id="modal1" class="modal">
+      <div class="modal-content">
+        <h5>Inverted Index</h5>
+        <p>An inverted index consists of a list of all the unique words that appear
+          in any document, and for each word, a list of the documents in which it
+          appears. Inverted index object takes a JSON array of text objects and creates
+          an index from the array. The index allows a user to search for text blocks
+          in the array that contain a specified collection of words.</p>
+        <h5>How It Works</h5>
+        <ul>
+          <li><strong>Creating an Index</strong></li>
+          <ol>
+            <li>Choose JSON file(s).</l1>
+              <li>Select JSON file.</li>
+              <li>Click <strong>Create Index</strong> button</li>
+          </ol>
+          <li><strong>Searching an Index</strong></li>
+          <ol>
+            <li>Select a file whose Index has been created already.</l1>
+              <li>Enter your search word(s)</li>
+              <li>Click on the 'search' button.</li>
+          </ol>
+        </ul>
       </div>
     </div>
   </div>
+</div>
+
+
   <div class="container">
     <div class="row">
       <div class="col s6">
@@ -121,6 +125,7 @@
     <script type="text/javascript" src="./inverted-index.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <script src="js/helper.js"></script>
+    <script src="js/init.js"></script>
     <script src="js/sweetalert.min.js"></script>
 </body>
 
