--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -11,38 +11,36 @@
 </head>
 
 <body ng-controller="myctrl">
-<div class="row">
-  <div class="inverted indigo col s12 white-text">
-    <h3> Inverted Index <a class="waves-effect indigo white-text right" href="#modal1">About</a></h3>
-    <div id="modal1" class="modal">
-      <div class="modal-content">
-        <h5>Inverted Index</h5>
-        <p>An inverted index consists of a list of all the unique words that appear
-          in any document, and for each word, a list of the documents in which it
-          appears. Inverted index object takes a JSON array of text objects and creates
-          an index from the array. The index allows a user to search for text blocks
-          in the array that contain a specified collection of words.</p>
-        <h5>How It Works</h5>
-        <ul>
-          <li><strong>Creating an Index</strong></li>
-          <ol>
-            <li>Choose JSON file(s).</l1>
-              <li>Select JSON file.</li>
-              <li>Click <strong>Create Index</strong> button</li>
-          </ol>
-          <li><strong>Searching an Index</strong></li>
-          <ol>
-            <li>Select a file whose Index has been created already.</l1>
-              <li>Enter your search word(s)</li>
-              <li>Click on the 'search' button.</li>
-          </ol>
-        </ul>
+  <div class="row">
+    <div class="inverted indigo col s12 white-text">
+      <h3> Inverted Index <a class="waves-effect indigo white-text right" href="#modal1">About</a></h3>
+      <div id="modal1" class="modal">
+        <div class="modal-content">
+          <h5>Inverted Index</h5>
+          <p>An inverted index consists of a list of all the unique words that appear
+            in any document, and for each word, a list of the documents in which
+            it appears. Inverted index object takes a JSON array of text objects
+            and creates an index from the array. The index allows a user to search
+            for text blocks in the array that contain a specified collection of words.</p>
+          <h5>How It Works</h5>
+          <ul>
+            <li><strong>Creating an Index</strong></li>
+            <ol>
+              <li>Choose JSON file(s).</l1>
+                <li>Select JSON file.</li>
+                <li>Click <strong>Create Index</strong> button</li>
+            </ol>
+            <li><strong>Searching an Index</strong></li>
+            <ol>
+              <li>Select a file whose Index has been created already.</l1>
+                <li>Enter your search word(s)</li>
+                <li>Click on the 'search' button.</li>
+            </ol>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
-</div>
-
-
   <div class="container">
     <div class="row">
       <div class="col s6">
@@ -52,7 +50,7 @@
           </div>
           <select class="browser-default" ng-model="selectedFile">
             <option value="" disabled selected>Select File</option>
-            <option value="{{files}}" ng-repeat="files in fileName">{{files}}</option>
+            <option value="{{files}}" ng-repeat="files in fileName track by $index">{{files}}</option>
           </select>
           <div class="createIndex">
             <button class="indigo white-text btn" id="createIndex" ng-click="createIndex()">Create index</button>
@@ -65,9 +63,8 @@
             <input placeholder="Search" ng-model="query" id="searchInput" maxlength="100">
           </div>
           <select class="browser-default" ng-model="searchFile">
-            <option value="" disabled selected>Select File</option>
-            <option value="all">All</option>
-            <option value="{{files}}" ng-repeat="files in fileName">{{files}}</option>
+            <option value="" default>All</option>
+            <option value="{{files}}" ng-repeat="files in fileName track by $index">{{files}}</option>
 
           </select>
           <div>
@@ -81,40 +78,40 @@
           <tr>
             <span ng-if="documents">
             <th data-field="id">{{selectedFile}}</th>
-            <th ng-repeat="num in documents">Doc {{num}}</th>
+            <th ng-repeat="book in documents track by $index">{{book.title}}</th>
             </span>
       </tr>
       </thead>
       <tbody>
-        <tr ng-repeat="(key,values) in result">
+        <tr ng-repeat="(key,values) in result track by $index">
           <td> {{key}}</td>
-          <td ng-repeat="num in documents">
-            <span ng-repeat="value in values">
-              <span ng-if="value == num"><i class="material-icons">check</i>
+          <td ng-repeat="book in documents track by $index">
+            <span ng-if="values.includes($index + 1)"><i class="material-icons">check</i>
               </span>
-            </span>
+            <span ng-if="!values.includes($index + 1)"><i class="material-icons">close</i>
+              </span>
           </td>
         </tr>
       </tbody>
       </table>
       </span>
-      <span ng-show="allTable" ng-repeat="(doc, docType) in documents">
-         <div class="bookDetails">{{doc}}</div>
+      <span ng-show="allTable" ng-repeat="(filename, value) in documents track by $index">
+         <div class="bookDetails">{{filename}}</div>
        <table class="striped">
          <thead>
            <tr>
-             <th ng-if="docType">Words</th>
-             <th ng-repeat="i in docType">Doc {{i}}</th>
+             <th ng-if="value">Words</th>
+             <th ng-repeat="book in value track by $index">{{book.title}}</th>
             </tr>
             </thead>
             <tbody>
-              <tr ng-repeat="(key, value) in result[doc] ">
+              <tr ng-repeat="(key, values) in result[filename] ">
                 <td>{{ key }}</td>
-                <td ng-repeat="i in docType">
-                   <span ng-repeat="val in value[key]">
-              <span ng-if="val == i"><i class="material-icons">check</i>
+                <td ng-repeat="i in documents[filename] track by $index">
+                <span ng-if="values.includes($index + 1)"><i class="material-icons">check</i>
               </span>
-      </span>
+            <span ng-if="!values.includes($index + 1)"><i class="material-icons">close</i>
+              </span>
       </tr>
       </tbody>
       </table>
@@ -124,7 +121,6 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
     <script type="text/javascript" src="./inverted-index.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
-    <script src="js/helper.js"></script>
     <script src="js/init.js"></script>
     <script src="js/sweetalert.min.js"></script>
 </body>
