Revert "Feedback from first defence"

--- a/jasmine/SpecRunner.html
+++ b/jasmine/SpecRunner.html
@@ -10,12 +10,12 @@
   <script src="lib/jasmine-2.3.4/jasmine.js"></script>
   <script src="lib/jasmine-2.3.4/jasmine-html.js"></script>
   <script src="lib/jasmine-2.3.4/boot.js"></script>
+  <script src="inverted-index.js"></script>
+  <script src="inverted-index-test.js"></script>
 
   <!-- include source files here... -->
-  <script src="inverted-index.js"></script>
 
   <!-- include spec files here... -->
-  <script src="build/bundle.js"></script>
 
 </head>
 
